# bank_project

./: .coverage  .gitignore  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt
src/: decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: processing.py  test_decorators.py  test_generators.py  test_masks.py  test_widget.py
